objects/Student__c.object
<CustomObject>
    <description>here is all details about students</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>here is address of student</description>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collage_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Here is lookup with collage object to get details of collage</description>
        <label>Collage</label>
        <referenceTo>Collage__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>here is mobile number of student</description>
        <label>Mobile Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <description>here is student&apos;s name</description>
        <label>Student Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Student_Name__c</columns>
        <columns>Collage_Name__c</columns>
        <columns>Address__c</columns>
        <columns>Mobile_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Student Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>